kitty config update

--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,29 +1,23 @@
-# vim:ft=kitty
-
-## name: Atelier Dune Dark
-## author: Bram de Haan (https://github.com/atelierbram)
-## license: MIT
-## upstream: https://github.com/atelierbram/AtelierSchemes-kitty/blob/main/themes/atelier-dune-dark.conf
-## blurb: A yellow-ish palette with warm brown greyed colors for the background. A welcoming, soothing friendly but also bright, colorscheme.
-
+# Melanż kitty theme
+# Basically just a copy of melange-nvim color scheme
+# to ensure smooth, seamless transitions between kitty and nvim
 
 #: The basic colors
 
-foreground #a6a28c
-background #20201d
-selection_foreground #a6a28c
-selection_background #292824
-
+foreground #ece1d7
+background #292522
+selection_foreground #ece1d7
+selection_background #403a36
 
 #: Cursor colors
 
 cursor #a6a28c
-cursor_text_color #20201d
+cursor_text_color #31302a
 
 
 #: URL underline color when hovering with mouse
 
-url_color #ae9513
+url_color #e49b5d
 
 
 #: kitty window border colors and terminal bell colors
@@ -36,9 +30,8 @@ visual_bell_color none
 
 #: OS Window titlebar colors
 
-wayland_titlebar_color #292824
-macos_titlebar_color #292824
-
+wayland_titlebar_color #34302C
+macos_titlebar_color #34302C
 
 #: Tab bar colors
 
