--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -4,10 +4,6 @@ font_family		BlexMono Nerd Font Mono
 bold_font		BlexMono Nerd Font Bold
 italic_font		BlexMono Nerd Font Italic
 bold_italic_font	BlexMono Nerd Font Bold Italic
-tab_powerline_style	slanted
-tab_bar_edge		top
-tab_bar_margin_height	0.0 0.0
-tab_title_template "{index}: {title.split('/')[-1]}"
 
 
 # BEGIN_KITTY_THEME
@@ -16,5 +12,5 @@ include current-theme.conf
 # END_KITTY_THEME
 #
 #
-background_opacity	0.8
-background_blur 30
+#background_opacity	0.8
+#background_blur 30
