kitty theme update and starship prompt added

--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,57 +1,19 @@
-# Melanż kitty theme
-# Basically just a copy of melange-nvim color scheme
-# to ensure smooth, seamless transitions between kitty and nvim
+# melange-kitty theme
+# kitty theme based on the amazing melange-nvim colorscheme for neovim
 
 #: The basic colors
-
 foreground #ece1d7
 background #292522
 selection_foreground #ece1d7
 selection_background #403a36
 
 #: Cursor colors
-
 cursor #a6a28c
 cursor_text_color #31302a
 
 
 #: URL underline color when hovering with mouse
-
 url_color #e49b5d
-
-
-#: kitty window border colors and terminal bell colors
-
-active_border_color #7d7a68
-inactive_border_color #20201d
-bell_border_color #b65611
-visual_bell_color none
-
-
-#: OS Window titlebar colors
-
-wayland_titlebar_color #34302C
-macos_titlebar_color #34302C
-
-#: Tab bar colors
-
-active_tab_foreground #e8e4cf
-active_tab_background #20201d
-inactive_tab_foreground #a6a28c
-inactive_tab_background #292824
-tab_bar_background #292824
-tab_bar_margin_color none
-
-
-#: Colors for marks (marked text in the terminal)
-
-mark1_foreground #20201d
-mark1_background #e8e4cf
-mark2_foreground #20201d
-mark2_background #ae9513
-mark3_foreground #20201d
-mark3_background #60ac39
-
 
 #: The basic 16 colors
 
@@ -60,15 +22,15 @@ color0 #20201d
 color8 #7d7a68
 
 #: red
-color1 #d73737
+color1 #d13f3f
 color9 #b65611
 
 #: green
-color2 #60ac39
+color2 #4eb570 
 color10 #292824
 
 #: yellow
-color3 #ae9513
+color3 #ebc06d
 color11 #6e6b5e
 
 #: blue
